[gd_scene load_steps=3 format=3 uid="uid://cetyfhp6xcwa3"]

[ext_resource type="PackedScene" uid="uid://b4ag5vuk12blt" path="res://Logo/logo.tscn" id="1_4fvhi"]
[ext_resource type="Script" path="res://MainScene/main_scene.gd" id="1_ssl1o"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_ssl1o")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -6.0
offset_top = -6.0
offset_right = 585.0
offset_bottom = 326.0
color = Color(0.356863, 0.666667, 1, 0.509804)

[node name="Logo" parent="." instance=ExtResource("1_4fvhi")]
offset_left = 227.0
offset_top = 69.0
offset_right = 350.0
offset_bottom = 117.0

[node name="start_game" type="Button" parent="."]
offset_left = 226.0
offset_top = 118.0
offset_right = 351.0
offset_bottom = 149.0
text = "START "

[node name="quit_game" type="Button" parent="."]
offset_left = 224.0
offset_top = 153.0
offset_right = 351.0
offset_bottom = 187.0
text = "QUIT"

[node name="Text" type="Node2D" parent="."]

[node name="titulo" type="Label" parent="Text"]
offset_left = 174.0
offset_top = 13.0
offset_right = 405.0
offset_bottom = 36.0
text = "Proyecto demo \"bomberman\""

[node name="nombre" type="Label" parent="Text"]
offset_left = 208.0
offset_top = 37.0
offset_right = 360.0
offset_bottom = 60.0
text = "DEV: Elias Escalante"

[node name="AudioSliders" type="Node2D" parent="."]

[node name="Effects" type="HSlider" parent="AudioSliders"]
offset_left = 252.0
offset_top = 261.0
offset_right = 357.0
offset_bottom = 277.0
min_value = -50.0
max_value = 0.0

[node name="Master" type="HSlider" parent="AudioSliders"]
offset_left = 252.0
offset_top = 219.0
offset_right = 357.0
offset_bottom = 235.0
min_value = -50.0
max_value = 0.0

[node name="Music" type="HSlider" parent="AudioSliders"]
offset_left = 252.0
offset_top = 241.0
offset_right = 357.0
offset_bottom = 257.0
min_value = -50.0
max_value = 0.0

[node name="Label" type="Label" parent="AudioSliders"]
offset_left = 192.0
offset_top = 212.0
offset_right = 249.0
offset_bottom = 235.0
text = "Master"

[node name="Label2" type="Label" parent="AudioSliders"]
offset_left = 194.0
offset_top = 254.0
offset_right = 251.0
offset_bottom = 277.0
text = "Effects"

[node name="Label3" type="Label" parent="AudioSliders"]
offset_left = 192.0
offset_top = 234.0
offset_right = 249.0
offset_bottom = 257.0
text = "Music"

[connection signal="pressed" from="start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="quit_game" to="." method="_on_quit_game_pressed"]
[connection signal="value_changed" from="AudioSliders/Effects" to="." method="_on_effects_value_changed"]
[connection signal="value_changed" from="AudioSliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="AudioSliders/Music" to="." method="_on_music_value_changed"]
